Added the option to save a puzzle.
This should allow for puzzles to be saved in a file in such a way that importing it restores the saved puzzle.

Signed-off-by: PTRCoder <pj.de.bruijne@gmail.com>